--- a/src/index.css
+++ b/src/index.css
@@ -1,44 +1,43 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-image: url("./images/spaceimage.png");
-  background-repeat: none;
-  background-size: cover;
-  background-attachment: fixed;
-  background-position: center;
-  color: white;
+	margin: 0;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
+		'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	background-image: url('./images/spaceimage.png');
+	background-repeat: none;
+	background-size: cover;
+	background-attachment: fixed;
+	background-position: center;
+	color: white;
 }
 
 /* HEADER */
-@import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 /* @import url(https://allfont.net/allfont.css?fonts=star-jedi); */
 h1 {
-  color: #ffe81f;
-  font-family: "Press Start 2P", cursive;
-  /* font-family: 'Star Jedi', arial; */
-  font-size: 3em;
-  letter-spacing: 0.5em;
+	color: #ffe81f;
+	font-family: 'Press Start 2P', cursive;
+	/* font-family: 'Star Jedi', arial; */
+	font-size: 3em;
+	letter-spacing: 0.5em;
 }
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
-#grid-container {
-  display: grid;
-  grid-template-areas: "1 2 3" "a b c" "d e f" "g h i" "j k l" "m n o" "footer footer footer";
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 200px auto auto auto auto 200px;
-  grid-gap: 30px 0px;
+.grid-container {
+	display: grid;
+	grid-template-areas: 'a b c' 'd e f' 'g h i' 'j k l' 'm n o' 'footer footer footer';
+	grid-template-columns: 1fr 1fr 1fr;
+	grid-template-rows: 200px 200px 200px 200px 200px;
+	grid-gap: 30px 0px;
+	padding-top: 12vh;
 }
 
 .header {
-  grid-column: 2/3;
-  text-align: center;
+	grid-column: 2/3;
+	text-align: center;
 }
 /*PLANET AREA ASSIGNMENT*/
 .a,
@@ -51,59 +50,65 @@ code {
 .h,
 .i,
 .k {
-  width: auto;
-  height: 200px;
-  margin: auto;
+	width: auto;
+	height: 200px;
+	margin: auto;
 }
 .a {
-  grid-area: a;
-  margin-right: 0;
+	grid-area: a;
+	margin-right: 0;
 }
 .b {
-  grid-area: b;
+	grid-area: b;
 }
 .c {
-  grid-area: c;
-  margin: 0;
+	grid-area: c;
+	margin: 0;
 }
 .d {
-  grid-area: d;
+	grid-area: d;
 }
 .e {
-  grid-area: e;
+	grid-area: e;
 }
 .f {
-  grid-area: f;
+	grid-area: f;
 }
 .g {
-  grid-area: g;
-  margin-right: 0;
+	grid-area: g;
+	margin-right: 0;
 }
 .h {
-  grid-area: h;
+	grid-area: h;
 }
 .i {
-  grid-area: i;
-  margin: 0;
+	grid-area: i;
+	margin: 0;
 }
 .k {
-  grid-area: k;
+	grid-area: k;
 }
 
 li,
 a {
-  text-decoration: none;
-  list-style: none;
-  color: yellow;
+	text-decoration: none;
+	list-style: none;
+	color: yellow;
 }
 
 img {
-  width: auto;
-  height: 200px;
+	width: auto;
+	height: 200px;
 }
 
 .planetsLeave a img {
-  width: auto;
-  height: 200px;
-  display: none;
+	width: auto;
+	height: 200px;
+	display: none;
+}
+.hidden {
+	display: none;
+}
+.selected {
+	grid-area: e;
 }
